// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoomStatusBar <RoomStatusBar /> unsent messages should render warning when messages are unsent due to consent 1`] = `
<div>
  <div
    class="mx_RoomStatusBar mx_RoomStatusBar_unsentMessages"
  >
    <div
      role="alert"
    >
      <div
        class="mx_RoomStatusBar_unsentBadge"
      >
        <div
          class="mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_level_highlight mx_NotificationBadge_2char cpd-theme-light"
        >
          <span
            class="mx_NotificationBadge_count"
          >
            !
          </span>
        </div>
      </div>
      <div>
        <div
          class="mx_RoomStatusBar_unsentTitle"
        >
          <span>
            You can't send any messages until you review and agree to 
            <a
              class="mx_ExternalLink"
              rel="noreferrer noopener"
              target="_blank"
            >
              our terms and conditions
              <i
                class="mx_ExternalLink_icon"
              />
            </a>
            .
          </span>
        </div>
        <div
          class="mx_RoomStatusBar_unsentDescription"
        >
          You can select all or individual messages to retry or delete
        </div>
      </div>
      <div
        class="mx_RoomStatusBar_unsentButtonBar"
      >
        <div
          class="mx_AccessibleButton mx_RoomStatusBar_unsentCancelAllBtn"
          role="button"
          tabindex="0"
        >
          Delete all
        </div>
        <div
          class="mx_AccessibleButton mx_RoomStatusBar_unsentRetry"
          role="button"
          tabindex="0"
        >
          Retry all
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RoomStatusBar <RoomStatusBar /> unsent messages should render warning when messages are unsent due to resource limit 1`] = `
<div>
  <div
    class="mx_RoomStatusBar mx_RoomStatusBar_unsentMessages"
  >
    <div
      role="alert"
    >
      <div
        class="mx_RoomStatusBar_unsentBadge"
      >
        <div
          class="mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_level_highlight mx_NotificationBadge_2char cpd-theme-light"
        >
          <span
            class="mx_NotificationBadge_count"
          >
            !
          </span>
        </div>
      </div>
      <div>
        <div
          class="mx_RoomStatusBar_unsentTitle"
        >
          Your message wasn't sent because this homeserver has exceeded a resource limit. Please contact your service administrator to continue using the service.
        </div>
        <div
          class="mx_RoomStatusBar_unsentDescription"
        >
          You can select all or individual messages to retry or delete
        </div>
      </div>
      <div
        class="mx_RoomStatusBar_unsentButtonBar"
      >
        <div
          class="mx_AccessibleButton mx_RoomStatusBar_unsentCancelAllBtn"
          role="button"
          tabindex="0"
        >
          Delete all
        </div>
        <div
          class="mx_AccessibleButton mx_RoomStatusBar_unsentRetry"
          role="button"
          tabindex="0"
        >
          Retry all
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RoomStatusBar Shared History Visibility Acknowledgement should not render history visibility acknowledgement if it has previously been dismissed 1`] = `<div />`;

exports[`RoomStatusBar Shared History Visibility Acknowledgement should not render history visibility acknowledgement in encrypted rooms with joined history visibility 1`] = `<div />`;

exports[`RoomStatusBar Shared History Visibility Acknowledgement should not render history visibility acknowledgement in unencrypted rooms 1`] = `<div />`;

exports[`RoomStatusBar Shared History Visibility Acknowledgement should render dismissable history visibility acknowledgement in encrypted rooms with non-join history visibility 1`] = `
<div>
  <div
    class="mx_RoomStatusBar mx_RoomStatusBar_historyVisibility"
  >
    <div
      role="alert"
    >
      <div
        class="mx_RoomStatusBar_historyVisibilityBadge"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
          />
          <path
            clip-rule="evenodd"
            d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div>
        <div
          class="mx_RoomStatusBar_historyVisibilityDescription"
        >
          Messages you send will be shared with new members invited to this room.
        </div>
        <a
          as="a"
          class="_link_1v5rz_8"
          data-kind="primary"
          data-size="medium"
          href="https://example.com"
          rel="noreferrer noopener"
          target="_blank"
        >
          Learn more
        </a>
      </div>
      <div
        class="mx_RoomStatusBar_historyVisibilityButtonBar"
      >
        <button
          class="_button_vczzf_8"
          data-kind="primary"
          data-size="sm"
          role="button"
          tabindex="0"
        >
          Dismiss
        </button>
      </div>
    </div>
  </div>
</div>
`;
